# FileManager

./: .gitignore  index.html  main.js  package-lock.json  package.json  style.css
src/: .py  index.html  main.html  main.js  main.ui.html  styles.css  styles.css.map  styles.scss
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/src/: fileset.rs  lib.rs  load.rs  login.rs  main.rs  menu.rs  registration.rs
src-tauri/src/util/: crypt.rs  encode.rs  load.rs  mod.rs
src/assets/inline/: index.html
src/assets/spritesheet/: index.html
src/js/: mainDisplay.js  tabControl.js
src/styles/: fileset-manager.css  fileset-manager.css.map  fileset-manager.scss  main.css  main.css.map  main.scss  tabs.css  tabs.css.map  tabs.scss
