[package]
name = "filemanager"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-exists", "shell-execute", "path-all", "dialog-message", "dialog-confirm", "dialog-open", "window-create"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10.8"
sha2 = "0.10.8"
pbkdf2 = "0.12.2"
aes-gcm = "0.10.3"
chrono = "0.4.35"
tokio = "1.36.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
